chore: created the logging feature for devices in simulation
